--- a/i18n/en.po
+++ b/i18n/en.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2023-01-22 09:53+0100\n"
+"POT-Creation-Date: 2023-07-24 19:36+0200\n"
 "PO-Revision-Date: 2022-07-20 19:18+0200\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
@@ -18,23 +18,23 @@ msgstr ""
 "Generated-By: Babel 2.10.3\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
-msgid "Master"
-msgstr ""
+msgid "RESUME_GAME"
+msgstr "Resume Game"
 
-msgid "Press any key..."
-msgstr ""
+msgid "BACK_MENU"
+msgstr "Back to menu"
 
-msgid "Resume"
-msgstr ""
+msgid "YOU_WIN"
+msgstr "You win"
 
-msgid "Options"
-msgstr ""
+msgid "YOU_LOSE"
+msgstr "You lose"
 
-msgid "Back to Menu"
-msgstr ""
+msgid "RESTART"
+msgstr "Restart"
 
-msgid "LANG_EN"
-msgstr "English"
+msgid "CARDS"
+msgstr "Cards"
 
-msgid "LANG_DE"
-msgstr "German"
+msgid "CLOSE"
+msgstr "Close"
