--- a/i18n/messages.pot
+++ b/i18n/messages.pot
@@ -8,33 +8,33 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2023-01-22 09:56+0100\n"
+"POT-Creation-Date: 2023-07-24 19:36+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Generated-By: Babel 2.10.3\n"
+"Generated-By: Babel 2.12.1\n"
 
-msgid "Master"
+msgid "RESUME_GAME"
 msgstr ""
 
-msgid "Press any key..."
+msgid "BACK_MENU"
 msgstr ""
 
-msgid "Resume"
+msgid "YOU_WIN"
 msgstr ""
 
-msgid "Options"
+msgid "YOU_LOSE"
 msgstr ""
 
-msgid "Back to Menu"
+msgid "RESTART"
 msgstr ""
 
-msgid "LANG_EN"
+msgid "CARDS"
 msgstr ""
 
-msgid "LANG_DE"
+msgid "CLOSE"
 msgstr ""
 
